# japanese-sentence-breaker

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/japanese_sentence_breaker/: __init__.py
tests/: test_japanese_sentence_breaker.py
