[tool.poetry]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = ""
homepage = "https://github.com/hpprc/japanese-sentence-breaker"
name = "japanese-sentence-breaker"
readme = "README.md"
repository = "https://github.com/hpprc/japanese-sentence-breaker"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
